--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -27,3 +27,8 @@ $positive  : #21BA45;
 $negative  : #C10015;
 $info      : #31CCEC;
 $warning   : #F2C037;
+
+$desktop: 1200px;
+$tablet: 990px;
+$phone-lg: 768px;
+$phone-sm: 576px;
